# massbitprotocol

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  SOLANA_FLOW.md  buid-and-upload.sh  deploy.sh  docker-compose.dev.yml  docker-compose.full.yml  docker-compose.min.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  docker_min.sh  environment.yml  main.tf  my_fourth_process  my_second_process  my_third_process  nekoverse-NFT.md  run.sh  schema.graphql  wrapper_script.sh
analytics/: .env  Cargo.toml  README.md  build.rs
analytics/migrations/2021-09-16-100257_ethereum/: down.sql  up.sql
analytics/migrations/2021-09-21-181000_state/: down.sql  up.sql
analytics/migrations/2021-09-28-161700_change_datetype/: down.sql  up.sql
analytics/migrations/2021-09-30-135500_add_solana/: down.sql  up.sql
analytics/migrations/2021-09-30-135500_solana_block_transactions/: up.sql
analytics/migrations/2021-10-05-090400_solana_instruction_logs/: down.sql  up.sql
analytics/migrations/2021-10-05-145400_solana_token_balances/: down.sql  up.sql
analytics/migrations/2021-10-06-091100_solana_stat_block/: down.sql  up.sql
analytics/migrations/2021-10-07-135200_solana_parsed_instructions/: down.sql  up.sql
analytics/migrations/2021-10-13-143000_solana_token/: down.sql  up.sql
analytics/migrations/2021-10-21-046000_solana_programs/: up.sql
analytics/migrations/2021-10-21-04600_solana_programs/: down.sql  up.sql
analytics/migrations/2021-10-21-105200_solana_transaction_add_instructions/: down.sql  up.sql
analytics/sqls/: metrics.sql  solana.sql
analytics/src/: lib.rs  main.rs  models.rs  postgres_adapter.rs  postgres_queries.rs  relational.rs  schema.rs  solana_scanner.rs  sql_value.rs  storage_adapter.rs  util.rs
analytics/src/ethereum/: handler.rs  mod.rs  models.rs
analytics/src/solana/: handler.rs  mod.rs  model.rs  processor.rs  reader.rs
analytics/src/substrate/: mod.rs
apis/indexer_api/: Cargo.toml
apis/indexer_api/src/: git_helper.rs  indexer_service.rs  lib.rs  main.rs  main_jsonrpc.rs  model.rs  server_builder.rs
apis/solana_api/: .env  Cargo.toml  README.md  account.md  diesel.toml
apis/solana_api/src/: account_api.rs  block_api.rs  helper.rs  lib.rs  main.rs  models.rs  rpc_handler.rs  transaction_api.rs
chain-reader/chain-reader/: .env  Cargo.toml  build.rs
chain-reader/chain-reader/example/: client.rs
chain-reader/chain-reader/src/: chain-reader.rs  command.rs  ethereum_chain.rs  grpc_stream.rs  lib.rs  solana_chain.rs  substrate_chain.rs
chain/ethereum/: Cargo.toml
chain/ethereum/examples/: firehose.rs  triggers.rs
chain/ethereum/src/: adapter.rs  chain.rs  data_source.rs  ethereum_adapter.rs  lib.rs  manifest.rs  network.rs  stream_types.rs  transport.rs  trigger.rs  types.rs
chain/solana/: Cargo.toml
chain/solana-sdk/: Cargo.toml
chain/solana-sdk/src/: data.rs  entity.rs  lib.rs  model.rs  scalar.rs  smart_contract.rs  store.rs  types.rs
chain/solana/src/: adapter.rs  lib.rs  (+5 more)
cli/: Cargo.toml  README.md  schema.graphql
cli/example/: project.yaml  schema.graphql
cli/src/: codegen.rs  main.rs  schema.rs  utils.rs
code-compiler/stub/: Cargo.toml
core/common/: Cargo.toml
core/data/: Cargo.toml
core/drive/: Cargo.toml
core/hasura-client/: Cargo.toml
core/index-store/: Cargo.toml
core/logger/: Cargo.toml
core/orm/: Cargo.toml
graphql/: Cargo.toml
graphql/src/: config.rs  lib.rs  main.rs  mock.rs  opt.rs  query.rs  runner.rs  store_builder.rs
index-manager/lib/: Cargo.toml  README.md
index-manager/main/: .env  Cargo.toml  README.md
indexer/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
indexer/block/: Cargo.toml
indexer/common/: Cargo.toml
indexer/diesel-derive-table/: Cargo.toml
indexer/example/: README.md  schema.graphql  up.sql
indexer/index-manager/: Cargo.toml  README.md  build.rs
indexer/index-manager-server/: Cargo.toml  README.md
indexer/indexer/: Cargo.toml
indexer/ipfs-client/: Cargo.toml
indexer/json-rpc-server/: Cargo.toml  README.md  build.rs
indexer/logger/: Cargo.toml
indexer/main/: Cargo.toml
indexer/manifest-reader/: Cargo.toml
indexer/migration/: indexers.sql
indexer/plugin/: Cargo.toml
indexer/plugins-core/: Cargo.toml
indexer/src/: indexer_substrate.rs  instance.rs  instance_manager.rs  interfaces.rs  lib.rs  link_resolver.rs  loader.rs  main.rs  models.rs  provider.rs  registrar.rs  types.rs
manager/: Cargo.toml  config.toml
manager/src/: config.rs  json_rpc.rs  main.rs  opt.rs  store_builder.rs
massbit/: Cargo.toml  build.rs
massbit-indexer/: Cargo.toml  build.rs
massbit-indexer/proto/: streamout.proto
massbit-indexer/src/: lib.rs  main.rs  substrate_chain.rs
massbit-sol-cli/: Cargo.toml  README.md
massbit-sol-cli/src/: config.rs  consts.rs  indexer_deploy.rs  indexer_release.rs  lib.rs  main.rs  schema.rs
massbit/proto/: bstream.proto  stream.proto
massbit/src/: cheap_clone.rs  ipfs_client.rs  ipfs_link_resolver.rs  lib.rs
mock/: Cargo.toml
mock/src/: lib.rs  main.rs  substrate_block.rs
monitor/: Cargo.toml
monitor/src/: lib.rs  main.rs  opt.rs  runner.rs  server.rs  service.rs
plugin/: Cargo.toml  README.md
plugin/adapter/: Cargo.toml  Cargo_new.toml  README.md  build.rs
plugin/app/: Cargo.toml
plugin/plugin/: Cargo.toml
plugin/plugin-core/: Cargo.toml
plugin/src/: core.rs  lib.rs  manager.rs
plugin/test-block/: payload.json
plugin/test-event/: payload.json  up.sql
plugin/test-extrinsic/: payload.json  up.sql
plugin/test-plugin/: Cargo.toml
plugin/test-solana-block/: Cargo.toml  payload.json  project.yaml  up.sql
plugin/test-solana-log-messages/: Cargo.toml  payload.json
plugin/test-solana-transaction/: Cargo.toml  payload.json
plugin/tests/: function.rs
plugin/types/: Cargo.toml
solana-cli/: Cargo.toml  README.md
solana-cli/src/: config.json  generator.rs  instruction_parser.rs  lib.rs  main.rs  schema.rs  serum.rs  serum_instruction.json  test_new.rs  test_origin.json  test_origin.rs
utils/: Cargo.toml
utils/src/: futures.rs  lib.rs
(+1024 files in other folders)
