[workspace]
members = [
    "analytics",
    "apis/solana_api",
    "apis/indexer-api",
    "apis/indexer-api",
    "chain-reader",
    "core/chain/solana",
    "core/drive",
    "core/orm",
    "core/storage/postgres",
    "core/index-store",
    "core/hasura-client",
    "core/data",
    "core/orm",
    "cli",
    "chain/ethereum",
    "chain/solana",
    "chain/solana-sdk",
    "massbit",
    "runtime/wasm",
    "runtime/derive",
    "store/postgres",
    "manager",
    "indexer-manager",
    "plugin/adapter",
    "plugin/plugin",
    "tests",
    "massbit-sol-cli",
    "graphql"
]
exclude = ["code-compiler/generated","apis/indexer-info_bak","core/orm"]

[patch.crates-io]
# Include protection against stack overflow when parsing from this PR: https://github.com/graphql-rust/graphql-parser/commit/45167b53e9533c331298683577ba8df7e43480ac
graphql-parser = {git="https://github.com/graphql-rust/graphql-parser", rev="45167b53e9533c331298683577ba8df7e43480ac"}

