[workspace]
members = [
    "analytics",
    "apis/solana_api",
    "apis/indexer-api",
    "chain-reader",
    "core/indexer-orm",
    "core/storage/postgres",
    "core/hasura-client",
    "core/data",
    "core/indexer-orm",
    "cli",
    "chain/ethereum",
    "chain/solana",
    "chain/solana-sdk",
    "massbit",
    "store/postgres",
    "manager",
    "monitor",
    "indexer-manager",
    "tests",
    "massbit-sol-cli",
    "graphql"
]
exclude = ["code-compiler/generated"]

[patch.crates-io]
# Include protection against stack overflow when parsing from this PR: https://github.com/graphql-rust/graphql-parser/commit/45167b53e9533c331298683577ba8df7e43480ac
graphql-parser = {git="https://github.com/graphql-rust/graphql-parser", rev="45167b53e9533c331298683577ba8df7e43480ac"}

