[package]
name = "analytics"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel          = { version = "1.4.7", features = ["postgres", "serde_json", "numeric", "r2d2", "chrono"] }
diesel-dynamic-schema = { git = "https://github.com/diesel-rs/diesel-dynamic-schema", rev="a8ec4fb1" }
diesel-derive-enum  = { version = "1.1", features = ["postgres"] }
diesel_migrations   = "1.4.0"
bigdecimal      = "0.1.2"
#num-bigint      = "0.2.6"
futures         = "0.1.31"
http            = "0.1.21" # must be compatible with the version rust-web3 uses
anyhow          = "1.0.42"
jsonrpc-core    = "14.2.0"
#tokio-compat-02 = "0.2"
#futures03       = { version = "0.3.1", package = "futures", features = ["compat"] }
log             = "0.4.14"
env_logger      = "0.9.0"
dotenv          = "0.15.0"
multiqueue      = "0.3.2"
broadcaster     = "1.0.0"
lazy_static     = "1.4.0"
hex             = { version = "0.4.3", default-features = false }
serde           = { version = "1.0", optional = false }
serde_json      = { version = "1.0", optional = false }
thiserror       = { version = "1.0", optional =false }
primitive-types = { version = "0.6.1", optional = true, features = ["codec"] }
tonic = "0.4"
prost = "0.7"
tower           = { version = "0.4" }
futures-core = "0.3"
futures-util = "0.3"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"
async-stream = "0.2"
rand = "0.7"
serde_yaml = "0.8"
hex-literal = "0.3"
sp-core = { default-features = false, version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.2", features = ["full_crypto"] }
sp-keyring = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.2" }
frame-system = { default-features = false,  version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.2" }
clap = { version = "2.33.3", features = ["yaml"] }
Inflector = "0.11.4"
massbit-common          = { path = "../core/common"}
massbit-chain-substrate = { path = "../core/chain/substrate" }
massbit-chain-solana = { path = "../core/chain/solana" }
massbit-chain-ethereum = { path = "../core/chain/ethereum" }
ipfs-client = { path = "../core/ipfs-client" }
logger = { path = "../core/logger" }

[dependencies.graph]
package = "graph"
git = "https://github.com/massbitprotocol/massbit-graph-node"
branch = "main"

[dependencies.graph-store-postgres]
package = "graph-store-postgres"
git = "https://github.com/massbitprotocol/massbit-graph-node"
branch = "main"

[build-dependencies]
tonic-build = "0.4"

[[bin]]
name = "analytics"
path = "src/main.rs"
