[package]
name = "massbit-graphql"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8"
deadpool = "0.8.0"
defer = "0.1"
dotenv = "0.15.0"
serde = "1.0.126"
#futures03 = { version = "0.3.1", package = "futures", features = ["compat"] }
graphql-parser = "0.4.0"
Inflector = "0.11.3"
thiserror = "1.0.30"
indexmap = "1.7"
http = "0.2"
hyper = {version = "0.14", features = ["server"] }
futures = "0.1.21"
structopt = { version = "0.3", features = ["wrap_help"] }
#sqlx = { version = "0.5.5", features = [ "runtime-tokio-rustls", "postgres", "macros" ] }
#strum = "0.21.0"
#strum_macros = "0.21.0"
massbit-common = { path = "../core/common" }
massbit-data = { path= "../core/data" }
massbit-storage = { path= "../core/storage" }
