[package]
name = "indexer"
version = "0.1.0"
authors = ["datzero9"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.1", features = ["full"] }
anyhow = "1"
syn = "0.11.11"
quote = "1.0.9"
Inflector = "0.11.4"
diesel = { version = "1.4.0", features = ["postgres"] }

[dependencies.ormx]
version = "0.7"
features = ["postgres"]

[dependencies.sqlx]
version = "0.5"
default-features = false
features = ["macros", "postgres", "runtime-tokio-rustls"]

#[dependencies.sp-runtime]
#git = "https://github.com/paritytech/substrate.git"
#branch = "master"
#package = "sp-runtime"
#default-features=false
#
#[dependencies.system]
#git = "https://github.com/paritytech/substrate.git"
#branch = "master"
#package = "frame-system"
#optional = true
#
#[dependencies.node-template-runtime]
#git = "https://github.com/scs/substrate-api-client-test-node"
#branch = "bump-to-polkadot-v0.9.2"

[dependencies.diesel_derive_table]
git = "https://github.com/theduke/diesel_derive_table.git"
branch = "master"
