[package]
name = "indexer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.50"
atomic_refcell = "0.1.7"
bytes = "0.5"
futures01 = { package="futures", version="0.1.31" }
futures = { version="0.3.4", features=["compat"] }
massbit = { path = "../massbit" }
# This dependency is temporary. The multiblockchain refactoring is not
# finished as long as this dependency exists
chain-ethereum = { path = "../chain/ethereum" }
runtime-wasm = { path = "../runtime/wasm" }
lazy_static = "1.2.0"
lru_time_cache = "0.11"
semver = "1.0.3"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
fail = "0.4"


[dev-dependencies]
walkdir = "2.3.2"
hex = "0.4.3"
graphql-parser = "0.3"
pretty_assertions = "0.7.2"
anyhow = "1.0"