[package]
name = "massbit"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethabi = { git = "https://github.com/graphprotocol/ethabi.git", branch = "master" }
anyhow = "1.0.43"
bytes = "1.0.1"
http = "0.2.3"
async-trait = "0.1.51"
futures = "0.1.21"
futures03 = { version = "0.3.1", package = "futures", features = ["compat"] }
lazy_static = "1.4.0"
semver = {version = "1.0.3", features = ["serde"]}
serde = { version = "1.0.126", features = ["rc"] }
serde_derive = "1.0.125"
serde_json = "1.0"
serde_yaml = "0.8"
thiserror = "1.0.29"
tokio = { version = "1.11.0", features = ["time", "sync", "macros", "test-util", "rt-multi-thread", "parking_lot"] }
tokio-stream = { version = "0.1.7", features = ["sync"] }
tokio-retry = "0.3.0"
fail = { version = "0.4", features = ["failpoints"] }
web3 = { git = "https://github.com/graphprotocol/rust-web3", branch = "master" }
hex = "0.4.3"
stable-hash = { git = "https://github.com/graphprotocol/stable-hash" }
petgraph = "0.6.0"
serde_plain = "1.0.0"
log = "0.4.14"
diesel = { version = "1.4.8", features = ["postgres", "serde_json", "numeric", "r2d2", "chrono"] }
diesel_derives = "1.4"
num-bigint = { version = "^0.2.6", features = ["serde"] }
num_cpus = "1.13.0"
num-traits = "0.2.14"
bigdecimal = { version = "0.1.0", features = ["serde"] }
strum = "0.21.0"
strum_macros = "0.21.1"
priority-queue = "0.7.0"
graphql-parser = {git="https://github.com/graphql-rust/graphql-parser", rev="45167b53e9533c331298683577ba8df7e43480ac"}
itertools = "0.10.1"
wasmparser = "0.78.2"
reqwest = { version = "0.11.2", features = ["json", "stream", "multipart", "trust-dns-resolver"] }
tiny-keccak = "1.5.0"
# Merge firehose
tonic = { version = "0.5", features = ["tls-roots"] }
prost = "0.8"
prost-types = "0.8.0"
rand = "0.6.1"
slog = { version = "2.7.0", features = ["release_max_level_trace", "max_level_trace"] }

[build-dependencies]
tonic-build = "0.5"