[package]
name = "mock"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
## Massbit Dependencies
massbit-chain-substrate = { path = "../core/chain/substrate"}

[dependencies.node-template-runtime]
git = "https://github.com/scs/substrate-api-client-test-node"
branch = "polkadot-v0.9.2"