[package]
name = "monitor"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.2.0", features = ["full"]} # Required by Tonic
hyper = {version = "0.14", features = ["server"] }
structopt = { version = "0.3.25", features = ["wrap_help"] }
http = "0.2"
futures = "0.1.21"
thiserror = "1.0.30"
massbit-common = { path = "../core/common" }
indexer-orm = { path = "../core/indexer-orm" }
diesel = { version = "1.4.7", features = ["postgres", "serde_json", "numeric", "r2d2", "chrono"] }