[package]
name = "plugin"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.5.2"

# Massbit Dependencies
massbit-chain-substrate = { path = "../core/chain/substrate" }
index-store = { path = "../core/index-store" }