[package]
name = "solana-cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
schemafy_core = { version = "0.6.0"} # VERSION_TAG
schemafy_lib = { version = "0.6.0"}   # VERSION_TAG
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
serde_repr = "0.1.7"
syn = "1.0"
bytemuck = { version = "1.4.0" }
arrayref = "0.3.6"
num_enum = "0.5.0"
schemars = "0.8.6"


#[[bin]] # Bin to run gRPC server
#name = "test_origin"
#path = "./src/test_origin.rs"