[package]
name = "solana-cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#schemafy_core = { version = "0.6.0"} # VERSION_TAG
#schemafy_lib = { version = "0.6.0"}   # VERSION_TAG
anyhow = "1.0.45"
clap = "2.33.3"
proc-macro2 = "1.0"
quote = "1.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
serde_repr = "0.1.7"
syn = "1.0"
bytemuck = { version = "1.4.0" }
arrayref = "0.3.6"
num_enum = "0.5.0"
schemars = "0.8.6"
bincode = "1.3.1"
num-derive = "0.3"
num-traits = "0.2"
thiserror = "1.0"
Inflector = "0.11"
uriparse = "0.6"
proptest = "1.0.0"
proptest-derive = "0.3.0"
tera = "1.15.0"
log = "0.4.14"
#[[bin]] # Bin to run gRPC server
#name = "test_origin"
#path = "./src/test_origin.rs"