[package]
name = "indexer_api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.51"
bigdecimal = "0.3.0"
bs58 = "0.4.0"
base64 = "0.13.0"
bytes = "1.1.0"
diesel          = { version = "1.4.7", features = ["postgres", "serde_json", "numeric", "r2d2", "chrono"] }
diesel-derive-enum  = { version = "1.1", features = ["postgres"] }
diesel_migrations   = "1.4.0"
derive_more = { version = "0.99.14" }
logger = { path = "../../core/logger" }
log = "0.4.14"
massbit = { path = "../../massbit" }
massbit-common = { path = "../../core/common" }
massbit-store-postgres = { path = "../../store/postgres"}
Inflector = "0.11.3"
chain-solana = { path = "../../chain/solana" }

reqwest = "0.11.6"
octocrab = "0.15.1"
priority-queue = "0.7.0"
libloading      =   "0.7.0"
massbit-solana-sdk = { path = "../../chain/solana-sdk" }
massbit-grpc = { path = "../../core/grpc" }
itertools = "0.10.1"
lazy_static     = "1.4.0"
serde_yaml = "0.8.21"
serde           = { version = "1.0", optional = false }
tokio = {version = "1.2.0", features = ["full"]} # Required by Tonic
futures = { version = "0.3.13", features = ["compat"] }
tokio-compat-02 = "0.2"
tokio02-spawn = { path = "../../core/tokio02-spawn" }
tonic           =   "0.5" # Chain Reader Client
prost           =   "0.7" # Chain Reader Client
tower           = { version = "0.4" }
uuid = "0.8.2"
warp = "0.3.2"

[dependencies.solana-sdk]
package = "solana-sdk"
git = "https://github.com/massbitprotocol/solana.git"
branch = "massbit"

[dependencies.solana-client]
package = "solana-client"
git = "https://github.com/massbitprotocol/solana.git"
branch = "massbit"

[dependencies.solana-transaction-status]
package = "solana-transaction-status"
git = "https://github.com/massbitprotocol/solana.git"
branch = "massbit"

[[bin]] # Bin to run gRPC server
name = "indexer-api"
path = "src/main.rs"